--- a/theme1.html
+++ b/theme1.html
@@ -138,6 +138,7 @@
           <th>12</th>
           <th>13</th>
           <th>14</th>
+          <th>15</th>
         </tr>
         <tr>
           <td>Ответ</td>
@@ -155,12 +156,13 @@
           <th>б</th>
           <th>в</th>
           <th>в</th>
+          <th>б</th>
         </tr>
       </table>
       <p></p>
       <table class="my-table">
         <tr>
-          <th>15</th>
+          <th>№</th>
           <th>16</th>
           <th>17</th>
           <th>18</th>
@@ -178,7 +180,7 @@
           <th>30</th>
         </tr>
         <tr>
-          <th>б</th>
+          <thОтвет</th>
           <th>а</th>
           <th>в</th>
           <th>а</th>
