--- a/theme1.html
+++ b/theme1.html
@@ -180,7 +180,7 @@
           <th>30</th>
         </tr>
         <tr>
-          <thОтвет</th>
+          <th>Ответ</th>
           <th>а</th>
           <th>в</th>
           <th>а</th>
