--- a/theme2.html
+++ b/theme2.html
@@ -1,18 +1,84 @@
 <!DOCTYPE html>
 <html class="content">
 <head>
-    <title>Тема 2</title>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"><script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <title>Глава II</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Тема 2</h1>
+        <h1>Глава II. Степень и ее свойства</h1>
     </header>
     <main>
-        <p>Содержание темы 2.</p>
-        
-        <p><span class="formula">$$$$</span>;</p>
+        <p>Важность осознанного и глубокого усвоения данной темы всеми учащимися обусловлена ее значением 
+            для понимания таких тем, как одночлены, многочлены, степень с целым, а затем рациональным 
+            показателем, тождественные преобразования дробных выражений и др.</p>
+        <p>Учащиеся должны уметь выполнять действия со степенями в примерах разной степени сложности.</p>
+        <h4>I. Непосредственное применение определения степени с натуральным 
+            показателем и следующих свойств:</h4>
+        <p>Определение: <span class="formula">$$\mathrm{a}^{\mathrm{n}}=\underbrace{\mathrm{a} \cdot 
+            \mathrm{a} \cdot \mathrm{a} \cdot \cdots \cdot \mathrm{a}}_{n-\text { множителей }}$$</span>
+            , где n - натуральное, n>1.</p>
+        <p><span class="formula">$$&&a^1=a ; a^0=1(a \neq 0)&&$$</span>;</p>
+        <p><i>Свойства:</i></p>
+        <div>
+            <ol>
+                <li><p><span class="formula">$$a^m a^n=a^{m+n}$$</span> - основное свойство;</p></li>
+                <li><p><span class="formula">$$\left(a^m\right)^n=a^{m n}$$</span>;</p></li>
+                <li><p><span class="formula">$$(a b)^{\mathrm{n}}=\mathrm{a}^{\mathrm{n}} \mathrm{b}^{\mathrm{n}}$$</span>;</p></li>
+                <li><p><span class="formula">$$a^n: a^m=a^{m-n}$$</span>, где <span class="formula">$$\mathrm{a} \neq 0, \mathrm{~m}>\mathrm{n}$$</span>;</p></li>
+                <li><p><span class="formula">$$\left(\frac{a}{b}\right)^n=\frac{a^n}{b^n}$$</span>, где <span class="formula">$$b \neq 0$$</span>;</p></li>
+            </ol>
+        </div>
+        <div>
+            <h4 class="inline">Пример 1.</h4>
+            <p class="inline">Какое число надо возвести в квадрат, чтобы получить: 
+                <span class="formula">$$9, \quad 81, \quad 0, \quad 16, \quad \frac{1}{25}$$</span>?</p>
+        </div>
+        <div>
+            <h4 class="inline">Ответ: </h4>
+            <p class="inline"><span class="formula">$$3,9,0,4, \frac{1}{5}$$</span></p>
+            <p>Какое число надо возвести в куб, чтобы получить: 
+                <span class="formula">$$8,-27, \frac{8}{27},-0,64$$</span>?</p>
+            <h4 class="inline">Ответ: </h4>
+            <p class="inline"><span class="formula">$$2,-3, \frac{2}{3},-0,4$$</span></p>
+        </div>
+        <div>
+            <h4 class="inline">Пример 2.</h4>
+            <p class="inline">Представьте выражение в виде степени: 
+                <span class="formula">$$\begin{gathered} 5 \cdot 5^2; y^4 y^6 y; 7 \cdot 49 \cdot 7^0; 
+                    \quad(-2,5)^3(-4)^3 ; \quad x^6: x ; \quad \frac{y^{18}}{y^6} ; 
+                    \quad\left(-x^3\right)^7; (-x)^4 \cdot x^8 ; \quad\left(a^3 a^4\right)^2 ; 
+                    \quad\left(a^3\right)^3 \cdot\left(a^3\right)^3 \end{gathered}$$</span>.</p>
+        </div>
+        <div>
+            <h4 class="inline">Ответ: </h4>
+            <p class="inline"><span class="formula">$$5^3 ; y^{11} ; 7^3 ; 10^3 ; x^5 ; y^{12} ;-x^{21} ; 
+                \quad x^{12} ; a^{14} ; a^{18}$$</span></p>
+        </div>
+        <div>
+            <h4 class="inline">Пример 3: </h4>
+            <p class="inline"><span class="formula">$$\frac{7^9 \cdot 7^5}{7^{12}} ; \quad \frac{2^5 
+                \cdot\left(2^3\right)^4}{2^{13}} ; \quad \frac{3^7 \cdot 27}{\left(3^4\right)^3} 
+                ;$$</span></p>
+        </div>
+        <div>
+            <h4 class="inline">Ответ: </h4>
+            <p class="inline"><span class="formula">$$49,16, \frac{1}{9}$$</span>.</p>
+        </div>
+        <h4>II. Выполнение действий со степенями при изучении темы «Одночлен», где основное 
+            назначение упражнений - уметь приводить одночлены к стандартному виду.</h4>
+        <p>Ненулевой одночлен, содержащий буквы, имеет стандартный вид, если он имеет только один 
+            числовой множитель, записанный на первом месте, а каждая его буква участвует в его 
+            записи лишь один раз в виде некоторой ее степени, при этом буквы записаны 
+            в порядке алфавита.</p>
+        <div>
+            
+        </div>
     </main>
+    <p><span class="formula">$$$$</span>;</p>
+    <h4 class="inline"></h4>
+            <p class="inline"></p>
     <footer>
         <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
     </footer>
