--- a/theme2.html
+++ b/theme2.html
@@ -19,7 +19,7 @@
         <p>Определение: <span class="formula">$$\mathrm{a}^{\mathrm{n}}=\underbrace{\mathrm{a} \cdot 
             \mathrm{a} \cdot \mathrm{a} \cdot \cdots \cdot \mathrm{a}}_{n-\text { множителей }}$$</span>
             , где n - натуральное, n>1.</p>
-        <p><span class="formula">$$&&a^1=a ; a^0=1(a \neq 0)&&$$</span>;</p>
+        <p><span class="formula">$$a^1=a ; a^0=1(a \neq 0)$$</span>;</p>
         <p><i>Свойства:</i></p>
         <div>
             <ol>
@@ -46,7 +46,7 @@
         <div>
             <h4 class="inline">Пример 2.</h4>
             <p class="inline">Представьте выражение в виде степени: 
-                <span class="formula">$$\begin{gathered} 5 \cdot 5^2; y^4 y^6 y; 7 \cdot 49 \cdot 7^0; 
+                <span class="formula">$$\begin{gathered} 5 \cdot 5^2;  y^4 y^6 y;  7 \cdot 49 \cdot 7^0;  
                     \quad(-2,5)^3(-4)^3 ; \quad x^6: x ; \quad \frac{y^{18}}{y^6} ; 
                     \quad\left(-x^3\right)^7; (-x)^4 \cdot x^8 ; \quad\left(a^3 a^4\right)^2 ; 
                     \quad\left(a^3\right)^3 \cdot\left(a^3\right)^3 \end{gathered}$$</span>.</p>
