--- a/theme2.html
+++ b/theme2.html
@@ -73,12 +73,80 @@
             записи лишь один раз в виде некоторой ее степени, при этом буквы записаны 
             в порядке алфавита.</p>
         <div>
+            <h4 class="inline">Пример 4. </h4>
+            <p class="inline">Вычислите: <span class="formula">$$\begin{gathered}
+                \left(-2,5 a^4 b^3 x^2\right) \cdot\left(-12 a b^2 y\right)=(-2,5 \cdot(-12))\left(a^5 
+                \cdot\left(b^3 b^2\right) x^2 y\right)= \\=30 a^5 x^2 y b^5\end{gathered}$$</span>;</p>
+        </div>
+        <div>
+            <h4 class="inline">Пример 5. </h4>
+            <p class="inline"><span class="formula">$$\left(5 b^2 c\right)^3=5^3\left(b^2\right)^3 
+                c^3=125 b^6 c^3$$</span>;</p>
+        </div>
+        <div>
+            <h4 class="inline">Пример 6. </h4>
+            <p class="inline">Представьте, если возможно, в виде квадрата или куба одночлена:</p>
+            <p><span class="formula">$$16 a^2 b^4=\left(4 a b^2\right)^2$$</span>;</p>
+            <p><span class="formula">$$-27 a^{12} b^6=\left(-3 a^4 b^2\right)^3$$</span>;</p>
+            <p><span class="formula">$$-49 x^4$$</span> - не представимо;</p>
+        </div>
+        <div>
+            <h4 class="inline">Пример 7. </h4>
+            <p class="inline">Вычислите: <span class="formula">$$\left(-\frac{2}{3} x^2 y\right)^3 
+                \cdot\left(-9 x y^3\right)=\left(-\frac{2}{3}\right)^3$$</span>;</p>
+        </div>
+        <div>
+            <p><i>Решение: </i><span class="formula">$$(-9)\left(x^6 x\right)\left(y^3 
+                y^3\right)=\frac{8 \cdot 9}{27} x^7 y^6=\frac{8}{9} x^7 y^6$$</span>;</p>
+        </div>
+        <h4>III. Выполнение комбинированных упражнений, которые требуют применения всех изученных 
+            в теме «Степень» тождеств.</h4>
+        <h4>Пример 8.</h4>
+        <div>
+            <p>1) Упростите выражения:</p>
+            <p>а) <span class="formula">$$\frac{\left(-3 x^2 y^5\right)^4}{54 x^8 y^{17}}=\frac{(-3)^4\left(x^2\right)^4\left(y^5\right)^4}{54 x^8 y^{17}}=\frac{81 x^8 y^{20}}{54 x^8 y^{17}}=\frac{3}{2} y^3$$</span>;</p>
+            <p>б) <span class="formula">$$\frac{\left(-2 a^3 k^2\right)^5}{48 a^{19} k^{10}}=\frac{(-2)^5\left(a^3\right)^5\left(k^2\right)^5}{48 a^{19} k^{10}}=-\frac{32 a^{15} k^{10}}{48 a^{15} a^4 k^{10}}=-\frac{2}{3 a^4}$$</span>;</p>
+            <p>в) <span class="formula">$$\frac{\left(a^2 y^5\right)^3}{\left(-a^3 y^4\right)^4}=\frac{\left(a^2\right)^3\left(y^5\right)^3}{(-1)^4\left(a^3\right)^4\left(y^4\right)^4}=\frac{a^6 y^{15}}{a^{12} y^{16}}=\frac{a^6 y^{15}}{a^6 a^6 y^{15} y}=\frac{1}{y a^6}$$</span>;</p>
+            <p>г) <span class="formula">$$\frac{\left(-b^2 y^8\right)^5}{\left(-b^3 y^{13}\right)^3}=\frac{(-1)^5 b^{10} y^{40}}{(-1)^3 b^9 y^{39}}=\frac{-b^{10} y^{40}}{-b^9 y^{39}}=b y$$</span>;</p>
+            <p>д) <span class="formula">$$\frac{\left(-2 c^5 y^6\right)^4}{\left(4 c^3 y^4\right)^3}=\frac{(-2)^4 c^{20} y^{24}}{\left(2^2\right)^3 c^9 y^{12}}=\frac{2^4 c^{11} y^{12}}{2^4 2^2}=\frac{1}{4} c^{11} y^{12}$$</span>;</p>
+        </div>
+        <div>
+            <p>2) Найдите значение выражения:</p>
+            <p>а) <span class="formula">$$\frac{6^9}{2^8 3^{10}}=\frac{(2 \cdot 3)^9}{2^8 3^{10}}=\frac{2^9 3^9}{2^8 3^9 3}=\frac{2}{3}$$</span>;</p>
+            <p>б) <span class="formula">$$\frac{5^7 3^5}{15^6}=\frac{5^7 3^5}{(5 \cdot 3)^6}=\frac{5^7 3^5}{5^6 3^6}=\frac{5^{7-6} \cdot 3^5}{3^5 3}=\frac{5}{3}$$</span>;</p>
+            <p>в) <span class="formula">$$\frac{12^9}{3^8 \cdot 8^6}=\frac{\left(2^2 \cdot 3\right)^9}{3^8 \cdot\left(2^3\right)^6}=\frac{3^9 \cdot 2^{18}}{3^8 \cdot 2^{18}}=3$$</span>;</p>
+            <p>г) <span class="formula">$$\frac{16^9 5^{19}}{20^{20}}=\frac{\left(4^2\right)^9 5^{19}}{(4 \cdot 5)^{20}}=\frac{4^{18} 5^{19}}{4^{20} 5^{20}}=\frac{1}{4^2 5}=\frac{1}{80}$$</span>;</p>
+            <p>д) <span class="formula">$$\frac{\left(4^2\right)^3 3^5}{12^5}=\frac{4^6 3^5}{4^5 3^5}=4$$</span>;</p>
+            <p>е) <span class="formula">$$\frac{35^7 2^4}{5^6 14^6}=\frac{(7 \cdot 5)^7 \cdot 2^4}{5^6 \cdot(2 \cdot 7)^6}=\frac{5^7 7^7 2^4}{5^6 7^6 2^6}=\frac{5 \cdot 7}{2^2}=\frac{5 \cdot 7}{4}=\frac{35}{4}=8 \frac{3}{4}$$</span>;</p>
+            <p>ж) <span class="formula">$$\frac{15^8}{9^4 125^2}=\frac{(3 \cdot 5)^8}{\left(3^2\right)^4\left(5^3\right)^2}=\frac{3^8 5^8}{3^8 5^6}=5^2=25$$</span>;</p>
+        </div>
+        <div>
+            <p>3) Упростите выражение и найдите его значение:</p>
+            <div>
+                <p>а) <span class="formula">$$\frac{\left(\frac{1}{4} m^3 n\right)^2 \cdot(-4 a b)^2 \cdot\left(-32 m^2 n\right)}{\left(-\frac{2}{3} m^2 n^2\right) \cdot\left(-9 a^2 b^2\right) \cdot\left(-27 m^5 n^3\right)}$$</span>;</p>
+                <p>при <span class="formula">$$\mathrm{m}=81, \mathrm{n}=-4, \mathrm{a}=-3 \frac{1}{2}, \mathrm{~b}=4 \frac{2}{3}$$</span>;</p>
+                <p><i>Решение.</i></p>
+                <p><span class="formula">$$\frac{\left(\frac{1}{4}\right)^2 \cdot(-4)^2 \cdot(-32) m^6 n^2 a^2 b^2 m^2 n}{\left(-\frac{2}{3}\right) \cdot(-9) \cdot(-27) m^2 n^2 a^2 b^2 m^5 n^3}=\frac{32 m^8 n^3}{6 \cdot 27 m^7 n^5}=\frac{16 m}{81 n^2}$$</span>;</p>
+                <p><span class="formula">$$\frac{16 \cdot 81}{81 \cdot(-4)^2}=1$$</span>;</p>
+            </div>
+            <div>
+                <p>б) <span class="formula">$$\frac{a b \cdot\left(-7 a b^3\right)^3 \cdot 4 a^2 b}{-9 a b^2\left(\frac{7}{9} a^2 b^2\right) \cdot(-4 b)^3}$$</span>;</p>
+                <p>при <span class="formula">$$a=-9, b=3,27$$</span>;</p>
+                <p><i>Решение.</i></p>
+                <p><span class="formula">$$\frac{(-7)^3 \cdot 4 a b a^3 b^9 a^2 b}{-9 \frac{7^3}{9^3} \cdot(-4)^3 a b^2 a^6 b^6 b^3}=\frac{7^3 \cdot 4 a^6 b^{11}}{7^3 \cdot 4^3 \cdot \frac{1}{81} a^7 b^{11}}=-\frac{81}{16 a}$$</span>;</p>
+                <p><span class="formula">$$-\frac{81}{16 \cdot(-9)}=\frac{9}{16}$$</span>;</p>
+            </div>
+        </div>
+        <p><i>Решите самостоятельно</i></p>
+        <div>
             
         </div>
     </main>
     <p><span class="formula">$$$$</span>;</p>
     <h4 class="inline"></h4>
             <p class="inline"></p>
+    <h4 class="inline"></h4>
+            <p class="inline"><span class="formula">$$$$</span>;</p>
     <footer>
         <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
     </footer>
