--- a/theme2.html
+++ b/theme2.html
@@ -76,7 +76,7 @@
             <h4 class="inline">Пример 4. </h4>
             <p class="inline">Вычислите: <span class="formula">$$\begin{gathered}
                 \left(-2,5 a^4 b^3 x^2\right) \cdot\left(-12 a b^2 y\right)=(-2,5 \cdot(-12))\left(a^5 
-                \cdot\left(b^3 b^2\right) x^2 y\right)= \\=30 a^5 x^2 y b^5\end{gathered}$$</span>;</p>
+                \cdot\left(b^3 b^2\right) x^2 y\right)=30 a^5 x^2 y b^5\end{gathered}$$</span>;</p>
         </div>
         <div>
             <h4 class="inline">Пример 5. </h4>
@@ -139,14 +139,51 @@
         </div>
         <p><i>Решите самостоятельно</i></p>
         <div>
-            
+            <p>1. Найти значение выражения: а) <span class="formula">$$-4 \cdot\left(-\frac{3}{4}\right)^2-\left(\frac{1}{3}\right)^2$$</span>; б) <span class="formula">$$-3\left(-\frac{2}{3}\right)^2-0,5^2$$</span>;</p>
+            <p>2. Упростите выражение: а) <span class="formula">$$\frac{m^4 \cdot\left(m^2\right)^6}{m^8}$$</span>; б) <span class="formula">$$\frac{a^2\left(a^3\right)^4}{a^7}$$</span>;</p>
+            <p>3. Вычислите: a) <span class="formula">$$\frac{9^3 \cdot 27^4}{81^5}$$</span>; б) <span class="formula">$$\frac{8^3 \cdot 16^4}{32^5}$$</span>;</p>
+            <p>4. Упростите: а) <span class="formula">$$\left(0,4 x^3 y^4\right)^2 \cdot \frac{1}{8} x^4 y$$</span>; б) <span class="formula">$$\left(0,3 x^2 y^3\right)^2 \cdot \frac{1}{3} x y^4$$</span>;</p>
+            <p>5. Упростив выражение, вычислите его значение: а) <span class="formula">$$\frac{\left(2 a^2 b^3\right)^3\left(0,5 a b^2\right)^2}{\left(3 a^2 b^3\right)^4}$$</span>, при <span class="formula">$$a=1, b=6 \frac{3}{4}$$</span>;</p>
+            <p>                                               б) <span class="formula">$$\frac{\left(3 a b^2\right)^3\left(\frac{1}{3} a^3 b^2\right)^2}{\left(2 a^4 b^5\right)^2}$$</span>, при <span class="formula">$$a=-3 \frac{3}{4}, b=-1$$</span>;</p>
+            <p>6. Найдите значение выражения В, если: а) <span class="formula">$$-45 x^3 y^2=\mathbf{B} \cdot 5 x^4 y^3$$</span>, и <span class="formula">$$x=-3, y=y=\frac{1}{6}$$</span>;</p>
+            <p>                                       б) <span class="formula">$$-3 x^4 y^3=\mathbf{B} \cdot 9 x^2 y^6$$</span>, и <span class="formula">$$x=-2, y=y=\frac{2}{3}$$</span>;</p>
+        </div>
+        <div>
+          <h4>Ответы к главе I «Числа и вычисления»</h4>
+          <table class="my-table">
+            <tr>
+              <th>№</th>
+              <th>1а</th>
+              <th>1б</th>
+              <th>2а</th>
+              <th>2б</th>
+              <th>3а</th>
+              <th>3б</th>
+              <th>4а</th>
+              <th>4б</th>
+              <th>5а</th>
+              <th>5б</th>
+              <th>6а</th>
+              <th>6б</th>
+            </tr>
+            <tr>
+              <td>Ответ</td>
+              <td><span class="formula">$$-2 \frac{13}{36}$$</span></td>
+              <td><span class="formula">$$-1 \frac{7}{12}$$</span></td>
+              <td><span class="formula">$$m^8$$</span></td>
+              <td><span class="formula">$$a^7$$</span></td>
+              <td><span class="formula">$$\frac{1}{9}$$</span></td>
+              <td><span class="formula">$$1$$</span></td>
+              <td><span class="formula">$$0,02 x^{10} y^9$$</span></td>
+              <td><span class="formula">$$0,03 x^5 y^{10}$$</span></td>
+              <td><span class="formula">$$\frac{1}{6}$$</span></td>
+              <td><span class="formula">$$-2 \frac{13}{16}$$</span></td>
+              <td><span class="formula">$$\frac{1}{12}$$</span></td>
+              <td><span class="formula">$$-9$$</span></td>
+            </tr>
+          </table>
         </div>
     </main>
-    <p><span class="formula">$$$$</span>;</p>
-    <h4 class="inline"></h4>
-            <p class="inline"></p>
-    <h4 class="inline"></h4>
-            <p class="inline"><span class="formula">$$$$</span>;</p>
     <footer>
         <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
     </footer>
