--- a/theme2.html
+++ b/theme2.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <header>
-        <h1>Глава II. Степень и ее свойства</h1>
+        <h1 class="center">Глава II. Степень и ее свойства</h1>
     </header>
     <main>
         <p>Важность осознанного и глубокого усвоения данной темы всеми учащимися обусловлена ее значением 
             для понимания таких тем, как одночлены, многочлены, степень с целым, а затем рациональным 
             показателем, тождественные преобразования дробных выражений и др.</p>
         <p>Учащиеся должны уметь выполнять действия со степенями в примерах разной степени сложности.</p>
-        <h4>I. Непосредственное применение определения степени с натуральным 
+        <h4 class="center">I. Непосредственное применение определения степени с натуральным 
             показателем и следующих свойств:</h4>
         <p>Определение: <span class="formula">$$\mathrm{a}^{\mathrm{n}}=\underbrace{\mathrm{a} \cdot 
             \mathrm{a} \cdot \mathrm{a} \cdot \cdots \cdot \mathrm{a}}_{n-\text { множителей }}$$</span>
@@ -66,7 +66,7 @@
             <h4 class="inline">Ответ: </h4>
             <p class="inline"><span class="formula">$$49,16, \frac{1}{9}$$</span>.</p>
         </div>
-        <h4>II. Выполнение действий со степенями при изучении темы «Одночлен», где основное 
+        <h4 class="center">II. Выполнение действий со степенями при изучении темы «Одночлен», где основное 
             назначение упражнений - уметь приводить одночлены к стандартному виду.</h4>
         <p>Ненулевой одночлен, содержащий буквы, имеет стандартный вид, если он имеет только один 
             числовой множитель, записанный на первом месте, а каждая его буква участвует в его 
@@ -99,7 +99,7 @@
             <p><i>Решение: </i><span class="formula">$$(-9)\left(x^6 x\right)\left(y^3 
                 y^3\right)=\frac{8 \cdot 9}{27} x^7 y^6=\frac{8}{9} x^7 y^6$$</span>;</p>
         </div>
-        <h4>III. Выполнение комбинированных упражнений, которые требуют применения всех изученных 
+        <h4 class="center">III. Выполнение комбинированных упражнений, которые требуют применения всех изученных 
             в теме «Степень» тождеств.</h4>
         <h4>Пример 8.</h4>
         <div>
@@ -112,41 +112,39 @@
         </div>
         <div>
             <p>2) Найдите значение выражения:</p>
-            <p>а) <span class="formula">$$\frac{6^9}{2^8 3^{10}}=\frac{(2 \cdot 3)^9}{2^8 3^{10}}=\frac{2^9 3^9}{2^8 3^9 3}=\frac{2}{3}$$</span>;</p>
-            <p>б) <span class="formula">$$\frac{5^7 3^5}{15^6}=\frac{5^7 3^5}{(5 \cdot 3)^6}=\frac{5^7 3^5}{5^6 3^6}=\frac{5^{7-6} \cdot 3^5}{3^5 3}=\frac{5}{3}$$</span>;</p>
-            <p>в) <span class="formula">$$\frac{12^9}{3^8 \cdot 8^6}=\frac{\left(2^2 \cdot 3\right)^9}{3^8 \cdot\left(2^3\right)^6}=\frac{3^9 \cdot 2^{18}}{3^8 \cdot 2^{18}}=3$$</span>;</p>
-            <p>г) <span class="formula">$$\frac{16^9 5^{19}}{20^{20}}=\frac{\left(4^2\right)^9 5^{19}}{(4 \cdot 5)^{20}}=\frac{4^{18} 5^{19}}{4^{20} 5^{20}}=\frac{1}{4^2 5}=\frac{1}{80}$$</span>;</p>
-            <p>д) <span class="formula">$$\frac{\left(4^2\right)^3 3^5}{12^5}=\frac{4^6 3^5}{4^5 3^5}=4$$</span>;</p>
-            <p>е) <span class="formula">$$\frac{35^7 2^4}{5^6 14^6}=\frac{(7 \cdot 5)^7 \cdot 2^4}{5^6 \cdot(2 \cdot 7)^6}=\frac{5^7 7^7 2^4}{5^6 7^6 2^6}=\frac{5 \cdot 7}{2^2}=\frac{5 \cdot 7}{4}=\frac{35}{4}=8 \frac{3}{4}$$</span>;</p>
-            <p>ж) <span class="formula">$$\frac{15^8}{9^4 125^2}=\frac{(3 \cdot 5)^8}{\left(3^2\right)^4\left(5^3\right)^2}=\frac{3^8 5^8}{3^8 5^6}=5^2=25$$</span>;</p>
+            <p>а)<span class="formula">$$\frac{6^9}{2^8 3^{10}}=\frac{(2 \cdot 3)^9}{2^8 3^{10}}=\frac{2^9 3^9}{2^8 3^9 3}=\frac{2}{3}$$</span>;</p>
+            <p>б)<span class="formula">$$\frac{5^7 3^5}{15^6}=\frac{5^7 3^5}{(5 \cdot 3)^6}=\frac{5^7 3^5}{5^6 3^6}=\frac{5^{7-6} \cdot 3^5}{3^5 3}=\frac{5}{3}$$</span>;</p>
+            <p>в)<span class="formula">$$\frac{12^9}{3^8 \cdot 8^6}=\frac{\left(2^2 \cdot 3\right)^9}{3^8 \cdot\left(2^3\right)^6}=\frac{3^9 \cdot 2^{18}}{3^8 \cdot 2^{18}}=3$$</span>;</p>
+            <p>г)<span class="formula">$$\frac{16^9 5^{19}}{20^{20}}=\frac{\left(4^2\right)^9 5^{19}}{(4 \cdot 5)^{20}}=\frac{4^{18} 5^{19}}{4^{20} 5^{20}}=\frac{1}{4^2 5}=\frac{1}{80}$$</span>;</p>
+            <p>д)<span class="formula">$$\frac{\left(4^2\right)^3 3^5}{12^5}=\frac{4^6 3^5}{4^5 3^5}=4$$</span>;</p>
+            <p>е)<span class="formula">$$\frac{35^7 2^4}{5^6 14^6}=\frac{(7 \cdot 5)^7 \cdot 2^4}{5^6 \cdot(2 \cdot 7)^6}=\frac{5^7 7^7 2^4}{5^6 7^6 2^6}=\frac{5 \cdot 7}{2^2}=\frac{5 \cdot 7}{4}=\frac{35}{4}=8 \frac{3}{4}$$</span>;</p>
+            <p>ж)<span class="formula">$$\frac{15^8}{9^4 125^2}=\frac{(3 \cdot 5)^8}{\left(3^2\right)^4\left(5^3\right)^2}=\frac{3^8 5^8}{3^8 5^6}=5^2=25$$</span>;</p>
         </div>
         <div>
             <p>3) Упростите выражение и найдите его значение:</p>
             <div>
-                <p>а) <span class="formula">$$\frac{\left(\frac{1}{4} m^3 n\right)^2 \cdot(-4 a b)^2 \cdot\left(-32 m^2 n\right)}{\left(-\frac{2}{3} m^2 n^2\right) \cdot\left(-9 a^2 b^2\right) \cdot\left(-27 m^5 n^3\right)}$$</span>;</p>
-                <p>при <span class="formula">$$\mathrm{m}=81, \mathrm{n}=-4, \mathrm{a}=-3 \frac{1}{2}, \mathrm{~b}=4 \frac{2}{3}$$</span>;</p>
+                <p>а)<span class="formula">$$\frac{\left(\frac{1}{4} m^3 n\right)^2 \cdot(-4 a b)^2 \cdot\left(-32 m^2 n\right)}{\left(-\frac{2}{3} m^2 n^2\right) \cdot\left(-9 a^2 b^2\right) \cdot\left(-27 m^5 n^3\right)}$$</span>, при <span class="formula">$$\mathrm{m}=81, \mathrm{n}=-4, \mathrm{a}=-3 \frac{1}{2}, \mathrm{~b}=4 \frac{2}{3}$$</span>;</p>
                 <p><i>Решение.</i></p>
                 <p><span class="formula">$$\frac{\left(\frac{1}{4}\right)^2 \cdot(-4)^2 \cdot(-32) m^6 n^2 a^2 b^2 m^2 n}{\left(-\frac{2}{3}\right) \cdot(-9) \cdot(-27) m^2 n^2 a^2 b^2 m^5 n^3}=\frac{32 m^8 n^3}{6 \cdot 27 m^7 n^5}=\frac{16 m}{81 n^2}$$</span>;</p>
                 <p><span class="formula">$$\frac{16 \cdot 81}{81 \cdot(-4)^2}=1$$</span>;</p>
             </div>
             <div>
-                <p>б) <span class="formula">$$\frac{a b \cdot\left(-7 a b^3\right)^3 \cdot 4 a^2 b}{-9 a b^2\left(\frac{7}{9} a^2 b^2\right) \cdot(-4 b)^3}$$</span>;</p>
-                <p>при <span class="formula">$$a=-9, b=3,27$$</span>;</p>
+                <p>б)<span class="formula">$$\frac{a b \cdot\left(-7 a b^3\right)^3 \cdot 4 a^2 b}{-9 a b^2\left(\frac{7}{9} a^2 b^2\right) \cdot(-4 b)^3}$$</span>, при <span class="formula">$$a=-9, b=3,27$$</span>;</p>
                 <p><i>Решение.</i></p>
                 <p><span class="formula">$$\frac{(-7)^3 \cdot 4 a b a^3 b^9 a^2 b}{-9 \frac{7^3}{9^3} \cdot(-4)^3 a b^2 a^6 b^6 b^3}=\frac{7^3 \cdot 4 a^6 b^{11}}{7^3 \cdot 4^3 \cdot \frac{1}{81} a^7 b^{11}}=-\frac{81}{16 a}$$</span>;</p>
                 <p><span class="formula">$$-\frac{81}{16 \cdot(-9)}=\frac{9}{16}$$</span>;</p>
             </div>
         </div>
-        <p><i>Решите самостоятельно</i></p>
+        <p class="center"><i>Решите самостоятельно</i></p>
         <div>
-            <p>1. Найти значение выражения: а) <span class="formula">$$-4 \cdot\left(-\frac{3}{4}\right)^2-\left(\frac{1}{3}\right)^2$$</span>; б) <span class="formula">$$-3\left(-\frac{2}{3}\right)^2-0,5^2$$</span>;</p>
-            <p>2. Упростите выражение: а) <span class="formula">$$\frac{m^4 \cdot\left(m^2\right)^6}{m^8}$$</span>; б) <span class="formula">$$\frac{a^2\left(a^3\right)^4}{a^7}$$</span>;</p>
-            <p>3. Вычислите: a) <span class="formula">$$\frac{9^3 \cdot 27^4}{81^5}$$</span>; б) <span class="formula">$$\frac{8^3 \cdot 16^4}{32^5}$$</span>;</p>
-            <p>4. Упростите: а) <span class="formula">$$\left(0,4 x^3 y^4\right)^2 \cdot \frac{1}{8} x^4 y$$</span>; б) <span class="formula">$$\left(0,3 x^2 y^3\right)^2 \cdot \frac{1}{3} x y^4$$</span>;</p>
-            <p>5. Упростив выражение, вычислите его значение: а) <span class="formula">$$\frac{\left(2 a^2 b^3\right)^3\left(0,5 a b^2\right)^2}{\left(3 a^2 b^3\right)^4}$$</span>, при <span class="formula">$$a=1, b=6 \frac{3}{4}$$</span>;</p>
-            <p>                                               б) <span class="formula">$$\frac{\left(3 a b^2\right)^3\left(\frac{1}{3} a^3 b^2\right)^2}{\left(2 a^4 b^5\right)^2}$$</span>, при <span class="formula">$$a=-3 \frac{3}{4}, b=-1$$</span>;</p>
-            <p>6. Найдите значение выражения В, если: а) <span class="formula">$$-45 x^3 y^2=\mathbf{B} \cdot 5 x^4 y^3$$</span>, и <span class="formula">$$x=-3, y=y=\frac{1}{6}$$</span>;</p>
-            <p>                                       б) <span class="formula">$$-3 x^4 y^3=\mathbf{B} \cdot 9 x^2 y^6$$</span>, и <span class="formula">$$x=-2, y=y=\frac{2}{3}$$</span>;</p>
+            <p>1. Найти значение выражения: а)<span class="formula">$$-4 \cdot\left(-\frac{3}{4}\right)^2-\left(\frac{1}{3}\right)^2$$</span>; б)<span class="formula">$$-3\left(-\frac{2}{3}\right)^2-0,5^2$$</span>;</p>
+            <p>2. Упростите выражение: а)<span class="formula">$$\frac{m^4 \cdot\left(m^2\right)^6}{m^8}$$</span>; б)<span class="formula">$$\frac{a^2\left(a^3\right)^4}{a^7}$$</span>;</p>
+            <p>3. Вычислите: a)<span class="formula">$$\frac{9^3 \cdot 27^4}{81^5}$$</span>; б)<span class="formula">$$\frac{8^3 \cdot 16^4}{32^5}$$</span>;</p>
+            <p>4. Упростите: а)<span class="formula">$$\left(0,4 x^3 y^4\right)^2 \cdot \frac{1}{8} x^4 y$$</span>; б)<span class="formula">$$\left(0,3 x^2 y^3\right)^2 \cdot \frac{1}{3} x y^4$$</span>;</p>
+            <p>5. Упростив выражение, вычислите его значение: а)<span class="formula">$$\frac{\left(2 a^2 b^3\right)^3\left(0,5 a b^2\right)^2}{\left(3 a^2 b^3\right)^4}$$</span>, при <span class="formula">$$a=1, b=6 \frac{3}{4}$$</span>;</p>
+            <p>                                               б)<span class="formula">$$\frac{\left(3 a b^2\right)^3\left(\frac{1}{3} a^3 b^2\right)^2}{\left(2 a^4 b^5\right)^2}$$</span>, при <span class="formula">$$a=-3 \frac{3}{4}, b=-1$$</span>;</p>
+            <p>6. Найдите значение выражения В, если: а)<span class="formula">$$-45 x^3 y^2=\mathbf{B} \cdot 5 x^4 y^3$$</span>, и <span class="formula">$$x=-3, y=y=\frac{1}{6}$$</span>;</p>
+            <p>                                       б)<span class="formula">$$-3 x^4 y^3=\mathbf{B} \cdot 9 x^2 y^6$$</span>, и <span class="formula">$$x=-2, y=y=\frac{2}{3}$$</span>;</p>
         </div>
         <div>
           <h4>Ответы к главе I «Числа и вычисления»</h4>
