--- a/theme2.html
+++ b/theme2.html
@@ -147,7 +147,7 @@
             <p>                                       б)<span class="formula">$$-3 x^4 y^3=\mathbf{B} \cdot 9 x^2 y^6$$</span>, и <span class="formula">$$x=-2, y=y=\frac{2}{3}$$</span>;</p>
         </div>
         <div>
-          <h4>Ответы к главе I «Числа и вычисления»</h4>
+          <h4 class="center">Ответы к главе I «Числа и вычисления»</h4>
           <table class="my-table">
             <tr>
               <th>№</th>
