--- a/theme1.html
+++ b/theme1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Глава I. Числа и вычисления</h1>
+        <h1 class="center">Глава I. Числа и вычисления</h1>
     </header>
     <main>
         <p>Задания на вычисления всегда включаются в работу, предлагаемую на вступительном испытании. Проверяется:</p>
@@ -60,7 +60,7 @@
       <p><span class="formula">$$ 700: 104=6 \frac{76}{104}=6\frac{19}{26} $$</span>;</p>
       <p>Значит, наибольшее число флаконов равняется 6.</p>
       <h4 class="inline">Ответ:</h4> <p class="inline">6.</p>
-      <p><i>Решите самостоятельно</i></p>
+      <p class="center"><i>Решите самостоятельно</i></p>
       <div>
         <ol>
           <li>Найдите значение выражения: <span class="formula">$$1 \frac{7}{8}+3 \frac{1}{8}:(13,75-12,5 \cdot 1,2)$$</span>;</li>
@@ -120,7 +120,7 @@
             блокируют до пополнения счёта. Сегодня утром у Лизы на счету было 300 руб. Сколько дней (включая сегодняшний) она сможет пользоваться телефоном, не пополняя счёт? (Ответ: 18)</li>
         </ol>
       </div>
-      <h4>Ответы к главе I «Числа и вычисления»</h4>
+      <h4 class="center">Ответы к главе I «Числа и вычисления»</h4>
       <table class="my-table">
         <tr>
           <th>№</th>
