--- a/theme3.html
+++ b/theme3.html
@@ -11,7 +11,7 @@
   </header>
   <main>
     <p><i>Уравнением</i> называется равенство, содержащее переменные.</p>
-    <p>1)<span class="formula">$$\left.\begin{array}{l}3 x-5=8, \\ 8 z+4 y=5\end{array}\right\} \quad уравнения
+    <p><span class="formula">$$\left.\begin{array}{l}3 x-5=8, \\ 8 z+4 y=5\end{array}\right\} \quad уравнения \\
 \left.\begin{array}{c}7+57=64 \\ 3 a+b\end{array}\right\} \quad не уравнения$$</span>;</p>
     <p><i>Решением</i> (корнем) уравнения называется значение переменной, при котором уравнение обращается в верное числовое равенство.</p>
     <p><i>Решить</i> уравнение – значит найти все решения данного уравнения или доказать, что их нет.</p>
@@ -67,7 +67,7 @@ $$
 \end{aligned}
 $$
 
-Ответ: любое число$</span>;</p>
+Ответ: любое число</span>;</p>
     <h4 class="inline">Пример 4.</h4> 
     <p class="inline">Решите уравнение<span class="formula">$$\frac{x+1}{2}+\frac{x-2}{4}=\frac{2 x+3}{3}-\frac{1}{2}$$</span></p>
     <i>Решение.</i>
