--- a/theme3.html
+++ b/theme3.html
@@ -11,8 +11,8 @@
   </header>
   <main>
     <p><i>Уравнением</i> называется равенство, содержащее переменные.</p>
-    <p><span class="formula">$$\left.\begin{array}{l}3 x-5=8, \\ 8 z+4 y=5\end{array}\right\} \quad уравнения</p>
-    <p><span class="formula">\left.\begin{array}{c}7+57=64 \\ 3 a+b\end{array}\right\} \quad не уравнения$$</span></span></p>
+    <p><span class="formula">$$\left.\begin{array}{l}3 x-5=8, \\ 8 z+4 y=5\end{array}\right\} \quad уравнения$$</p>
+    <p><span class="formula">$$\left.\begin{array}{c}7+57=64 \\ 3 a+b\end{array}\right\} \quad не уравнения$$</span></span></p>
     <p><i>Решением</i> (корнем) уравнения называется значение переменной, при котором уравнение обращается в верное числовое равенство.</p>
     <p><i>Решить</i> уравнение – значит найти все решения данного уравнения или доказать, что их нет.</p>
     <p>Уравнение вида<span class="formula">$$a x+b=0$$</span>, где x - переменная, a и b - некторые числа, называется <i>линейным уравнением</i>.</p>
