--- a/theme3.html
+++ b/theme3.html
@@ -142,7 +142,8 @@ $$
           <td><span class="formula">$$-3$$</span></td>
           <td><span class="formula">$$60$$</span></td>
           <td><span class="formula">$$17$$</span></td>
-          <td><p>Любое</p><p>число</p></td>
+          <td>Любое 
+            число</td>
           <td><span class="formula">$$1 \frac{40}{41}$$</span></td>
           <td><span class="formula">$$7$$</span></td>
           <td><span class="formula">$$3$$</span></td>
